--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,14 @@ body {
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
-  --main-bg-color: #e6e8e6;
+  --main-bg-color: rgb(241, 253, 239);
+  --text-color: #2e4a42;
   --pastel-blue: #92cccc;
   --pastel-green: #c3deba;
-  --secondary-bg-color: #ffffff;
+  --secondary-bg-color: rgb(217, 242, 231);
   display: flex;
   flex-direction: column;
-  color: white;
+  background: linear-gradient(to bottom right, #92cccc, #c3deba);
 }
 
 .content {
@@ -25,8 +26,9 @@ body {
   background-color: var(--main-bg-color);
   display: flex;
   flex-direction: column;
-  color: black;
+  color: var(--text-color);
   overflow: auto;
+  border-radius: 1rem 1rem 0 0;
 }
 
 .project-content {
@@ -42,15 +44,10 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  background-image: linear-gradient(
-    to right,
-    var(--pastel-blue),
-    var(--pastel-green)
-  );
   gap: 10px;
 }
 
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 768px) {
   .content {
     padding: 0px 50px;
   }
@@ -64,28 +61,47 @@ nav > * {
 }
 
 a {
-  color: black;
+  color: var(--text-color);
 }
 
 nav > a:link {
   text-decoration: none;
 }
 
+/* reference: https://github.com/Chalarangelo/30-seconds-of-code/blob/master/content/snippets/css/s/hover-underline-animation.md */
+.hover-under {
+  display: inline-block;
+  position: relative;
+}
+
+.hover-under::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--text-color);
+  transition: transform 0.25s ease-out;
+  transform-origin: bottom center;
+}
+
+.hover-under:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom center;
+}
+
 .intro-bg {
-  background-image: linear-gradient(
-    to right,
-    var(--pastel-blue),
-    var(--pastel-green)
-  );
+  background: transparent;
 }
 
 .intro-text {
-  overflow: hidden; 
-  border-right: 0.1em solid black; 
-  white-space: nowrap; 
-  margin: 0 auto; 
+  overflow: hidden;
+  border-right: 0.1em solid black;
+  white-space: nowrap;
+  margin: 0 auto;
   letter-spacing: 0em;
-  font-family: "Courier New", Courier, monospace;
   font-size: 10vw;
   width: auto;
   animation: typing 2s steps(40, end), blink-caret 0.75s step-end infinite;
@@ -126,16 +142,21 @@ nav > a:link {
   animation-name: fade;
   animation-duration: 5s;
 }
+
 .intro-image {
   height: 10vw;
   width: auto;
+}
+
+svg {
+  color: var(--text-color);
 }
 
 .hov-text {
   margin-top: 0;
   font-size: 3rem;
   color: transparent;
-  text-shadow: 3px 3px black;
+  text-shadow: 3px 3px var(--text-color);
   cursor: default;
   transition: linear 0.5s;
   text-wrap: nowrap;
@@ -147,7 +168,7 @@ nav > a:link {
   background-clip: text;
 }
 
-.hov-text:hover{
+.hov-text:hover {
   text-decoration: underline;
 }
 
@@ -175,13 +196,17 @@ nav > a:link {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .card {
   border-radius: 1rem;
-  background-color: var(--secondary-bg-color);
-  padding: 10px 20px;
+  background: var(--secondary-bg-color);
+  padding: 20px 20px;
+}
+
+.card > h1 {
+  margin-top: 0;
 }
 
 @keyframes fade {
@@ -213,6 +238,6 @@ nav > a:link {
     border-color: transparent;
   }
   50% {
-    border-color: black;
+    border-color: var(--text-color);
   }
 }
