--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,6 @@ body {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  gap: 20px;
 }
 
 .navbar {
@@ -152,8 +151,12 @@ svg {
   color: var(--text-color);
 }
 
+hr {
+  color: var(--text-color);
+}
+
 .hov-text {
-  margin-top: 0;
+  margin: 0 auto;
   font-size: 3rem;
   color: transparent;
   text-shadow: 3px 3px var(--text-color);
@@ -177,7 +180,6 @@ svg {
 }
 
 .about-hobbies {
-  margin-top: 4rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -203,9 +205,10 @@ svg {
   border-radius: 1rem;
   background: var(--secondary-bg-color);
   padding: 20px 20px;
+  margin-bottom: 1rem;
 }
 
-.card > h1 {
+.card > * {
   margin-top: 0;
 }
 
