--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,8 @@ body {
   flex-direction: row;
   align-items: center;
   gap: 10px;
+  position: sticky;
+  top:0;
 }
 
 @media only screen and (min-width: 768px) {
