--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 html,
 body {
-  height: 100vh;
+  height: 100dvh;
   max-height: 100dvh;
   max-width: 100vw;
 }
@@ -16,6 +16,7 @@ body {
   display: flex;
   flex-direction: column;
   background: linear-gradient(to bottom right, #92cccc, #c3deba);
+  overflow: hidden;
 }
 
 .content {
